Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9216

Interop: 2.7.0 client fails to mount on ~2.9.53 server

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.10.0
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      Trying to test interop client 2.7.0 and current master (~2.9.53). The client failed to mount.
      Server: https://review.whamcloud.com/#/c/25853/
      https://testing.hpdd.intel.com/test_sets/a3ddeed6-0656-11e7-9750-5254006e85c2

      client syslog:

      Mar 11 11:20:28 trevis-55vm1 kernel: Lustre: DEBUG MARKER: mount -t lustre -o user_xattr,flock trevis-55vm7@tcp:/lustre /mnt/lustre
      Mar 11 11:20:28 trevis-55vm1 kernel: LustreError: 6140:0:(mgc_request.c:2001:mgc_process_config()) Cannot process recover llog -22
      Mar 11 11:20:28 trevis-55vm1 kernel: LustreError: 15b-f: MGC10.9.6.115@tcp: The configuration from log 'lustre-client'failed from the MGS (-22).  Make sure this client and the MGS are running compatible versions of Lustre.
      Mar 11 11:20:28 trevis-55vm1 kernel: LustreError: 2274:0:(lov_obd.c:946:lov_cleanup()) lustre-clilov-ffff88007da58000: lov tgt 0 not cleaned! deathrow=0, lovrc=1
      Mar 11 11:20:28 trevis-55vm1 kernel: Lustre: Unmounted lustre-client
      Mar 11 11:20:28 trevis-55vm1 kernel: LustreError: 6140:0:(obd_mount.c:1339:lustre_fill_super()) Unable to mount  (-22)
      

            niu Niu Yawei (Inactive)
            utopiabound Nathaniel Clark
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: